ingress-routes/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`traefik.etna.student`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
