ingress-routes/grafana-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.etna.student`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          port: 3000
  tls:
    certResolver: letsencrypt-staging
