ingress-routes/hugo-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hugo
  namespace: traefik
spec:
  entryPoints: 
    - websecure
  routes:
    - kind: Rule
      match: Host(`hugo.etna.student`)
      middlewares:
        - name: hugo-basicauth
          namespace: traefik
      services:
        - name: hugo
          namespace: clo4
          port: 1313
  tls:
    certResolver: letsencrypt-staging
