ingress-routes/metrics-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
