ingress-routes/prometheus-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.etna.student`)
      kind: Rule
      services:
        - name: prometheus-k8s
          namespace: monitoring
          port: 9090
  tls:
    certResolver: letsencrypt-staging
