ingress-routes/vault-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.etna.student`)
      kind: Rule
      services:
        - name: vault
          namespace: vault
          port: 8200
  tls:
    certResolver: letsencrypt-staging
